--- a/cgb.css
+++ b/cgb.css
@@ -10,6 +10,21 @@ body {
 	background-color: #ffffff;
 }
 
+input[type=text] {
+	font-family: "Arial", "Helvetica", "sans-serif";
+	font-size: 16px;
+}
+
+input[type=submit] {
+	font-family: "Arial", "Helvetica", "sans-serif";
+	font-size: 16px;
+	background-color: #ededed;
+}
+
+textarea {
+	font-family: "Arial", "Helvetica", "sans-serif";
+	font-size: 16px;
+}
 
 A:link {color: #003399;}
 A:visited {color: #003399;}
