--- a/starter-template.css
+++ b/starter-template.css
@@ -16,3 +16,19 @@ body {
   padding: 0px 150px 40px;
   /*text-align: center;*/
 }
+@media (max-width: 978px) {
+    .container {
+      padding:0;
+      margin:0;
+    }
+
+    body {
+      padding:0;
+    }
+
+    .navbar-fixed-top, .navbar-fixed-bottom, .navbar-static-top {
+      margin-left: 0;
+      margin-right: 0;
+      margin-bottom:0;
+    }
+}
